[tool]
[tool.poetry]
name = "deluge-card"
version = "0.3.0"
homepage = "https://github.com/mupaduw/deluge-card"
description = "python api for synthstrom deluge cards from fw3.15+."
authors = ["Chris Chamberlain <chrisbc@artisan.co.nz>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "deluge_card" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dev-dependencies]

black  = { version = ">=22.3"}
isort  = { version = "^5.8.0"}
flake8  = { version = "^3.9.2"}
flake8-docstrings = { version = "^1.6.0"}
mypy = {version = "^0.900"}
pytest  = { version = "^6.2.4"}
pytest-cov  = { version = "^2.12.0"}
tox  = { version = "^3.20.1"}
virtualenv  = { version = "^20.2.2"}
pip  = { version = "^20.3.1", optional = true}

mkdocs  = {version = ">=1.1"}
mkdocs-include-markdown-plugin  = {version = ">=1.0.0"}
mkdocs-material  = {version = ">=6.1.7"}
mkdocs-material-extensions  = {version = ">=1.0.1"}
mkdocstrings  = {version = ">=0.18.0"}
mkdocs-autorefs = {version = ">=0.3.1"}
twine  = {version = "^3.3.0"}

pre-commit = {version = "^2.12.0", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}
jinja2 = {version = "==3.0.3"}

click = "^8.1.3"
pymdown-extensions = ">=9.4"
mkdocstrings-python = ">=0.6.5"
mkdocs-pymdownx-material-extras = "^2.0.3"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
lxml = "^4.8.0"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38','py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
